--- a/config/locales/eng/languages.yml
+++ b/config/locales/eng/languages.yml
@@ -5603,7 +5603,7 @@ eng:
     saa: 'Saba' #!
     sab: 'Buglere' #!
     sac: 'Mesquakie' #!
-    #>sad: 'Sandawe'
+    #>sad: 'Sad' # 'Sandawe'
     sae: 'Sabanês' #!
     saf: 'Safaliba' #!
     sag: 'Sango'
