--- a/config/locales/eng/pack.resources.yml
+++ b/config/locales/eng/pack.resources.yml
@@ -1,60 +1,60 @@
 eng:
   controllers:
     resources:
-      #>client_code: 'Code client'
+      #>client_code: 'Client code' # 'Code client'
       title: 'Resources'
   helpers:
     resources:
   views:
     resources:
       employee:
-        #>event_create: 'Ajouter un événement'
+        #>event_create: 'Event create' # 'Ajouter un événement'
         events:
-          #>one: '1 événement'
-          #>other: '{{count}} événements'
-          #>zero: 'Aucun événement'
+          #>one: 'One' # '1 événement'
+          #>other: 'Other' # '{{count}} événements'
+          #>zero: 'Zero' # 'Aucun événement'
         operations:
-          #>one: '1 travail'
-          #>other: '{{count}} travaux'
-          #>zero: 'Aucun travail'
-        #>sale_order_create: 'Créer un nouveau devis'
+          #>one: 'One' # '1 travail'
+          #>other: 'Other' # '{{count}} travaux'
+          #>zero: 'Zero' # 'Aucun travail'
+        #>sale_order_create: 'Sale order create' # 'Créer un nouveau devis'
         sale_orders:
-          #>one: '1 vente'
-          #>other: '{{count}} ventes'
-          #>zero: 'Aucune vente'
-        #>title: 'Employé : {{label}}'
-        #>user_update: 'Modifier la fiche'
+          #>one: 'One' # '1 vente'
+          #>other: 'Other' # '{{count}} ventes'
+          #>zero: 'Zero' # 'Aucune vente'
+        #>title: 'Title' # 'Employé : {{label}}'
+        #>user_update: 'User update' # 'Modifier la fiche'
       employee_create:
-        #>title: 'Création d''un nouvel employé'
+        #>title: 'Title' # 'Création d''un nouvel employé'
       _employee_form:
-        #>select_user: '-- Sans utilisateur --'
+        #>select_user: 'Select user' # '-- Sans utilisateur --'
       employee_update:
-        #>title: 'Modification d''un employé'
+        #>title: 'Title' # 'Modification d''un employé'
       employees:
-        #>create: 'Créer un nouvel employé'
+        #>create: 'Create' # 'Créer un nouvel employé'
         nb_employees:
-          #>one: '1 employé enregistré'
-          #>other: '{{count}} employés enregistrés'
-          #>zero: 'Aucun employé enregistré'
-        #>title: 'Fiches des employés'
-        #>user_create: 'Création d''un nouvel employé'
+          #>one: 'One' # '1 employé enregistré'
+          #>other: 'Other' # '{{count}} employés enregistrés'
+          #>zero: 'Zero' # 'Aucun employé enregistré'
+        #>title: 'Title' # 'Fiches des employés'
+        #>user_create: 'User create' # 'Création d''un nouvel employé'
       _employees_search:
-        #>search: 'Rechercher un employé'
-        #>title: 'Recherche'
+        #>search: 'Search' # 'Rechercher un employé'
+        #>title: 'Title' # 'Recherche'
       index:
-        #>employees: 'Fiches employés'
-        #>human: 'Ressources humaines'
+        #>employees: 'Employees' # 'Fiches employés'
+        #>human: 'Human' # 'Ressources humaines'
         nb_employees:
-          #>one: '1 employé'
-          #>other: '{{count}} employés'
-          #>zero: 'Aucun employé'
-        #>parameters: 'Paramètres'
-        #>professions: 'Professions'
-        #>title: 'Gestion des ressources'
+          #>one: 'One' # '1 employé'
+          #>other: 'Other' # '{{count}} employés'
+          #>zero: 'Zero' # 'Aucun employé'
+        #>parameters: 'Parameters' # 'Paramètres'
+        #>professions: 'Professions' # 'Professions'
+        #>title: 'Title' # 'Gestion des ressources'
       profession_create:
-        #>title: 'Ajout d''une nouvelle profession'
+        #>title: 'Title' # 'Ajout d''une nouvelle profession'
       profession_update:
-        #>title: 'Modification de la profession'
+        #>title: 'Title' # 'Modification de la profession'
       professions:
-        #>profession_create: 'Ajouter une nouvelle profession'
-        #>title: 'Gestion des professions'
+        #>profession_create: 'Profession create' # 'Ajouter une nouvelle profession'
+        #>title: 'Title' # 'Gestion des professions'
