Begins to work again on translations
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1590 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/general.yml
+++ b/config/locales/fra/general.yml
@@ -562,17 +562,17 @@ fra:
       format:
         delimiter: ','
         format: '%u%n'
-        precision: '2'
+        precision: 2
         separator: '.'
         unit: '$'
     format:
       delimiter: ' '
-      precision: '3'
+      precision: 3
       separator: ','
     human:
       format:
         delimiter: ''
-        precision: '1'
+        precision: 1
     percentage:
       format:
         delimiter: ''
