--- a/config/locales/spa/languages.yml
+++ b/config/locales/spa/languages.yml
@@ -1095,7 +1095,7 @@ spa:
     #>zea: 'Zéeuws'
     #>zen: 'Zenaga'
     #>zha: 'Zhuang'
-    #>zho: 'Chinois'
+    zho: 'Chino'
     #>zib: 'Langue des signes zimbabwéenne'
     #>zma: 'Manda (Australie)'
     #>zmi: 'Malais négéri-sembilan'
