--- a/config/locales/eng/support.yml
+++ b/config/locales/eng/support.yml
@@ -1,10 +1,19 @@
 eng:
+  about:
+    authors: 'Brice Texier, Jean-Jacques Vangramberen'
+    dir: 'ltr'
+    iso2: 'en'
+    name: 'English'
   date:
     abbr_day_names: ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat']
     abbr_month_names: ['', 'jan', 'feb', 'mar', 'apr', 'may', 'jun', 'jul', 'aug', 'sep', 'oct', 'nov', 'dec']
     day_names: ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']
     formats:
       default: '%m/%d/%Y'
+      legal: '%d %B %Y'
+      long: '%B %d, %Y'
+      month_letter: '%d %B %Y'
+      short: '%b %d'
     month_names: ['', 'january', 'february', 'march', 'april', 'may', 'june', 'july', 'august', 'september', 'october', 'november', 'december']
     order: [:month, :day, :year]
   datetime:
@@ -47,7 +56,9 @@ eng:
       title: 'Export'
       true_value: 'TRUE'
       xcsv: 'Excel CSV'
+    next: 'Next'
     no_records: 'No records'
+    previous: 'Previous'
   number:
     currency:
       format:
@@ -80,4 +91,6 @@ eng:
     am: 'am'
     formats:
       default: '%b. %d, %Y at %H:%M:%S'
+      long: '%B %d, %Y %H:%M'
+      short: '%d %b %H:%M'
     pm: 'pm'
