--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -259,15 +259,15 @@ spa:
     authentication: 'Autenticación'
     company: 'Compañía'
     help: 'Ayuda'
-    management: 'Administracion comercial'
+    management: 'Administración comercial'
     production: 'Producción'
-    relations: 'Relacións'
+    relations: 'Relaciónes'
   labels:
-    account:  #!
+    account_tabbox:  #!
       children: 'subcuentos' #!
       entities: 'Personas' #!
       journal_entries: 'Éscrituras' #!
-    account_accruals: 'Cuentos de regularisacion'
+    account_accruals: 'Cuentos de regularisación'
     #>account_attorney_to_create: '-- Créer automatiquement un compte mandataire --'
     account_claims_assets: 'Creditos'
     #>account_client_to_create: '-- Créer automatiquement un compte client --'
@@ -275,7 +275,7 @@ spa:
     account_current_assets: 'Activo circulando'
     account_debt: 'Deudas'
     account_equity: 'Capitales propios'
-    account_financial_assets: 'Inmobilisacion financières'
+    account_financial_assets: 'Inmobilisación financières'
     account_fixed_assets: 'Activo inmobilisado'
     account_inventories_assets: 'Stocks'
     account_letter: 'Letra de cuento'
@@ -284,10 +284,6 @@ spa:
     account_others_assets: 'Autros'
     account_provision: 'Provisiones para riesgos y cargas'
     #>account_supplier_to_create: '-- Créer automatiquement un compte fournisseur --'
-    account_tabbox:
-      #>children: 'Sous-comptes'
-      #>entities: 'Personnes'
-      #>journal_entries: 'Écritures'
     account_tangible_fixed_assets: 'Inmobilisaciones corporales'
     account_untangible_fixed_assets: 'Inmobilisacions incorporales'
     account_update: 'Modificar el cuento'
@@ -382,7 +378,7 @@ spa:
     #>client_code: 'Code cl.'
     #>client_informations: 'Informations client'
     #>client_phone: 'Téléphone'
-    close: 'Cerrar el periodico'
+    close: 'Cerrar'
     #>close_financialyear: 'Clôturer l''exercice'
     #>close_journal: 'Clôturer le journal'
     closed: 'Cerrados'
@@ -414,7 +410,7 @@ spa:
     #>coordinates: 'Coordonnées de l''abonnement'
     #>copy_of: 'Copie de %{source}'
     cost_income_statement: 'Cargas'
-    cost_sum: 'Total cargas de explotacion'
+    cost_sum: 'Total cargas de explotación'
     counts_by_nature: 'Nombre de piezas a contabilizar por tipo'
     #>create: 'Créer'
     create_journal: '-- Crear el periodico --'
@@ -444,7 +440,7 @@ spa:
     delivery_natural_gas_and_electricity_not_assessable: 'Entrega de gaz natural ou elctricidad no imponible en Francia'
     department_create: 'Añadir un nuevo servicio' #!
     departments: 'Servicios'
-    description: 'Descripcion general'
+    description: 'Descripción general'
     #>details: 'Informations complémentaires'
     #>discount: 'Réduc. (%)'
     #>display: 'Afficher'
@@ -501,8 +497,8 @@ spa:
     #>estimate_to_order: 'Passer le devis en commande'
     europe_out_export: 'Exportaciones fuera de CC.EE'
     events:  #!
-      one: ' Acontecimiento de tipo {{nature}} de duracion {{duration}} minutas' #!
-      other: ' {{count}} acontecimiento de tipo {{nature}} para une duracion total de {{duration}} minutas' #!
+      one: ' Acontecimiento de tipo {{nature}} de duración {{duration}} minutas' #!
+      other: ' {{count}} acontecimiento de tipo {{nature}} para une duración total de {{duration}} minutas' #!
       zero: ' Ningun acontecimiento de tipo {{nature}}' #!
     #>example: 'Exemple&nbsp;: %{value}'
     #>executed: 'Réalisé'
@@ -524,7 +520,7 @@ spa:
     financialyear_create: 'Abrir un nuevo ejercicio contable' #!
     #>finish: 'Terminer'
     finished_income_statement: 'Productos'
-    finished_sum: 'Total productos de explotacion'
+    finished_sum: 'Total productos de explotación'
     #>finishes: 'Termine par'
     #>first_contact: 'Adresse principale'
     format_date:
@@ -533,7 +529,7 @@ spa:
     from: 'Expedidor'
     #>full_name: 'Client'
     #>future_events: 'Futurs événements'
-    general: 'Descripcion general'
+    general: 'Descripción general'
     general_informations: 'Informaciones generales'
     general_ledger: 'Grande libro'
     #>give_discount: 'Octroyer une remise'
@@ -548,7 +544,7 @@ spa:
       #>zero: ''
     iban: 'Numero de cuento bancario internacional (IBAN)'
     #>identification: 'Nom et codes du produit'
-    import: 'Importacion de un  fichero de salvaguardia'
+    import: 'Importación de un  fichero de salvaguardia'
     #>import_backup: 'Import de fichier de sauvegarde'
     #>importation_explanation: 'Pour confirmer l''importation, vous devez confirmer en cliquant sur Importer.'
     #>in_line_create: 'Ajouter un produit intrant'
@@ -561,7 +557,7 @@ spa:
     insert_password: 'Coja su nueva contraseña'
     international_normal_vat_collected: 'Tasa normal a 8,5%'
     international_reduce_vat_collected: 'Tasa réducida a 2,1%'
-    international_vat_collected: 'Operacion realisada en los DOM'
+    international_vat_collected: 'Operación realisada en los DOM'
     interval: 'Intervalo personalisado'
     inventory: 'Completar el inventario'
     inventory_create: 'Hacer un nuevo inventario' #!
@@ -612,13 +608,13 @@ spa:
     line_amount: 'PU HT'
     line_amount_with_taxes: 'PU TTC'
     #>line_stock: 'Lieu de stockage: %{location}, quantité disponible: %{virtual_q}'
-    listing_create: 'Craer una nueva extraccion' #!
-    listing_extract: 'Ejecutar la extraccion'
+    listing_create: 'Craer una nueva extracción' #!
+    listing_extract: 'Ejecutar la extracción'
     listing_mail: 'Enviar un correo electronico'
     listings: 'Extracciones de datos'
     load_demo_data: 'Cargar datos de prueba'
     locale: 'Idioma'
-    localization: 'Localisacion geografica'
+    localization: 'Localisación geografica'
     location:  #! String excepted (Hash:{:stock_moves=>"Movimientos de deposito", :stocks=>"Estado de los depositos"})
       stock_moves: 'Movimientos de deposito' #! String excepted (Hash:{:stock_moves=>"Movimientos de deposito", :stocks=>"Estado de los depositos"})
       stocks: 'Estado de los depositos' #! String excepted (Hash:{:stock_moves=>"Movimientos de deposito", :stocks=>"Estado de los depositos"})
@@ -637,7 +633,7 @@ spa:
       one: '1 correro electronico'
       other: '{{count}} correos electronicos'
       zero: 'Ningun correo electronico'
-    management: 'Administracion comercial'
+    management: 'Administración comercial'
     #>management_index: 'Index de la gestion commerciale'
     management_rights: 'Derechos modulo comercio'
     mandates:
@@ -717,9 +713,9 @@ spa:
       #>other: '%{count} produits enregistrés'
       #>zero: 'Aucun produit enregistré'
     nb_purchases:
-      one: 'Una compra en espera de recepcion'
-      other: '{{count}} Compras en espera de recepcion'
-      zero: 'Ningunas compras en espera de recepcion'
+      one: 'Una compra en espera de recepción'
+      other: '{{count}} Compras en espera de recepción'
+      zero: 'Ningunas compras en espera de recepción'
     nb_sales:
       one: '1 encargo'
       other: '{{count}} encargos'
@@ -842,8 +838,8 @@ spa:
       #>stock_moves: 'Mouvements de stock'
       #>stocks: 'Stocks'
     #>product_update: 'Modifier la fiche du produit'
-    production: 'Administracion de la produccion'
-    production_rights: 'Derechos modulo produccion'
+    production: 'Administración de la producción'
+    production_rights: 'Derechos modulo producción'
     #>productions: 'Productions'
     #>products: 'Produits'
     #>purchase: 'Commande'
@@ -866,7 +862,7 @@ spa:
       #>waiting: 'À décaisser plus tard'
     #>purchase_price_create: 'Créer un prix d''achat'
     purchase_steps:
-      active: 'Creacion de la compra'
+      active: 'Creación de la compra'
       summary: 'Desembolsos'
     #>purchases: 'Achats'
     #>purchases_price_create: 'Ajouter un prix d''achat'
@@ -892,7 +888,7 @@ spa:
     reservoir_informations: 'Informaciones sobre el deposito'
     reservoirs_create: 'A~nadir un deposito'
     resource: 'Consultar la pieza de origen : {{resource}} {{numero}}'
-    resources: 'Administracion de los recursos humanos'
+    resources: 'Administración de los recursos humanos'
     resources_rights: 'Derechos modulo recursos'
     #>rest_to_pay: 'Reste à payer'
     restore: 'Restaurar'
@@ -907,8 +903,8 @@ spa:
     role_create: 'A~nadir un papel' #!
     role_name: 'Entrar el nombre del papel y atribuirle sus derechos'
     roles: 'Papeles'
-    running_cost: 'Cargas de explotacion'
-    running_finished: 'Productos de explotacion'
+    running_cost: 'Cargas de explotación'
+    running_finished: 'Productos de explotación'
     #>sale_conditions: 'Conditions de vente'
     sale_order: 'Encargos'
     #>sale_order_confirm: 'Passer le devis en commande et aller aux livraisons'
@@ -938,9 +934,9 @@ spa:
       #>waiting: 'À encaisser plus tard'
     #>sale_price_create: 'Créer un prix de vente'
     sale_steps:
-      deliveries: 'Planificacion de las entregas'
-      estimate: 'Creacion del presupuesto'
-      general: 'Descripcion'
+      deliveries: 'Planificación de las entregas'
+      estimate: 'Creación del presupuesto'
+      general: 'Descripción'
       products: 'Productos'
       summary: 'Factura y encajonamientos'
     sales: 'Exportar un cuadro de ventas al formato CSV' #!
@@ -959,7 +955,7 @@ spa:
     select_closure_date: 'Escoger la fecha de cierre'
     #>select_columns: 'Cochez les colonnes que vous voulez voir apparaitre dans le tableau.'
     #>select_date: 'Entrez une date'
-    select_date_generation: 'Fecha limita de integracion'
+    select_date_generation: 'Fecha limita de integración'
     #>select_existing_payment: 'Sélectionner un encaissement existant'
     #>select_file_to_upload: 'Sélectionnez le fichier à importer'
     select_financialyear: 'Ejercicio'
@@ -1006,7 +1002,7 @@ spa:
     #>supply: 'Livraison'
     synthesis: 'Documentos de sintesis'
     tax_create: 'Añadir una nueva tasa' #!
-    tax_declaration_create: 'Añadir una nueva declaracion'
+    tax_declaration_create: 'Añadir una nueva declaración'
     theoric_quantity: 'cantidad teorica'
     to: 'Al'
     #>to_bank_on: 'À encaisser le'
@@ -1060,7 +1056,7 @@ spa:
     validate: 'Validar'
     validate_selected_entries: 'Validar la escrituras seleccionadas'
     vat: 'Tasa a pagar'
-    vat_acquisitions: 'Adquisicion intracomunotarios'
+    vat_acquisitions: 'Adquisición intracomunotarios'
     vat_amount: 'Tasa deuda'
     vat_collected: 'TVA BRUTA'
     vat_paid: 'TVA DEDUCTIBLE'
@@ -1121,10 +1117,10 @@ spa:
     entity_columns_are_needed: 'se debe especifiar a lo menos une columna para la persona y particularmente sur nombre.'
     exception_raised: 'Un error sobrevino durante el tratamiento : {{mensaje}}'
     expired_session: 'sesion espirada. por favor reconectese.'
-    fails_to_extract_listing: 'La extraccion no ha podido hacerse : {{mensaje}}'
+    fails_to_extract_listing: 'La extracción no ha podido hacerse : {{mensaje}}'
     import_succeeded: 'Sus datos han sido correctamente importados'
-    importation_cancelled: 'Sus datos no han sido importados. La importacion ha sido anulada'
-    importation_finished: 'La importacion esta terminada.'
+    importation_cancelled: 'Sus datos no han sido importados. La importación ha sido anulada'
+    importation_finished: 'La importación esta terminada.'
     impossible_to_add_lines: 'No se puede añadir productos a su venta, el presupuesto esta en encargo'
     impossible_to_add_lines_to_purchase: 'No se puede añadir productos a su compra'
     invalid_file_nature: 'Tipo de fichero invalido'
@@ -1135,8 +1131,8 @@ spa:
     mails_are_sent: 'Los correos electronicos han sido enviados'
     need_balanced_journal_to_tax_declaration: 'Todos sur periodicos deben de ser cerrados y equilibrados a esta fecha.'
     need_cash_to_record_statements: 'Debe por lo menos crear una cuenta bancaria para poder coger un extracto de cuenta .'
-    need_closed_financialyear_to_declaration: 'Debe terner un ejercicio cerrado para crear una declaracion de TVA.'
-    need_company_code_to_login: 'Se debe seleccionar su sociedad para poder conectarse con su nombre de utilizador'
+    need_closed_financialyear_to_declaration: 'Debe terner un ejercicio cerrado para crear una declaración de TVA.'
+    need_company_code_to_login: 'Se debe selecciónar su sociedad para poder conectarse con su nombre de utilizador'
     need_entries_to_point: 'Ninguna escritura ha sido encontrada por el periodo de la lista bancaria.'
     need_journal_to_record_tax_declaration: 'Se debe tener pôr lo menos un periodico de las operaciones diversas y un periodico de venta o de compra para poder registrar dclaraciones de tasa.'
     need_location_to_create_purchase_order_line: 'Se debe crear un lugar de almacenamiento para hacer una compra'
@@ -1159,7 +1155,7 @@ spa:
     no_location: 'Ningun lugar de almacenamineto es definido. por favor cree uno para administrar los depositos'
     no_payment_to_embank: 'Ninguna forma de pago a cobrar'
     no_reopenable_journal: 'nos se puede cerrar este periodico.'
-    no_stocks: 'No hay ningun deposito. Si se quiere adùinistrar los depositos para une producto, por favor escroge la opcion "administrar los depositos" dentro de las caracteristicas de vuestro producto.'
+    no_stocks: 'No hay ningun deposito. Si se quiere adùinistrar los depositos para une producto, por favor escroge la opción "administrar los depositos" dentro de las caracteristicas de vuestro producto.'
     no_template_journal: 'Ningun modelo de periodico'
     no_template_journal_by_id: 'Ningun modedo de periodico'
     no_unvalidated_operations: 'Ningún trabajo que hay que realizar'
@@ -1169,7 +1165,7 @@ spa:
     record_cannot_be_removed: 'El registro no puede ser suprimido'
     record_has_been_correctly_removed: 'El registro ha sido suprimido correctamente'
     record_has_not_been_removed: 'El registro no puede ser suprimido'
-    restoration_finished: 'La restauracion de la salvaguardia se tremino (en {{nombre}} secondos). Su codigo sociedad es {{codigo}}'
+    restoration_finished: 'La restauración de la salvaguardia se tremino (en {{nombre}} secondos). Su codigo sociedad es {{codigo}}'
     sale_order_already_invoiced: 'La vente a déjà été facturée: vous ne pouvez pas définir de livraison'
     sale_order_cannot_be_updated: 'El presupuesto ya no esta modificable.'
     sale_order_cant_be_deleted: 'La venta no puede ser suprimida'
@@ -1186,7 +1182,7 @@ spa:
       one: 'Hay escritura a puntar'
       other: 'hay {{numero}} escrituras a puntar'
       zero: 'No hay escrituras a puntar por el momento'
-    you_must_have_an_email_column: 'Se debe terner una columna Correos Electronicos en su extraccion'
+    you_must_have_an_email_column: 'Se debe terner una columna Correos Electronicos en su extracción'
     you_must_select_a_file_to_import: 'Se debe seleccionar un fichero para importar'
     you_will_lose_all_your_current_data: 'Si continua, va a perder todos los datos en curso de embargo. Se quiere perseguir ?'
   parameters:
